Fix wrapping for more than 3 news and events

--- a/web/themes/custom/crew/sass/components/_external-feeds.scss
+++ b/web/themes/custom/crew/sass/components/_external-feeds.scss
@@ -28,6 +28,7 @@
       display: flex;
       padding: 0;
       gap: 4rem;
+      flex-wrap: wrap;
       @media #{$small-max} {
         flex-direction: column;
         padding: 0;
@@ -35,7 +36,13 @@
       }
 
       li {
-        flex-basis: 33%;
+        flex-basis: 31%;
+        @media #{$jumbo-max} {
+          flex-basis: 30%;
+        }
+        @media #{$medium-max} {
+          flex-basis: 29%;
+        }
         @media #{$small-max} {
           flex-basis: 100%;
         }
